--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src -d lib",
+    "playground": "babel-node lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
